# ProyectoFinalED2

./: adc.s  gpio.s  main.c  main.h  main.s  pwm.s  uart.s
05-exampleADCPWM-C/05_pwmAdcC/: CMakeLists.txt
05-exampleADCPWM-C/05_pwmAdcC/include/: main.h
05-exampleADCPWM-C/05_pwmAdcC/src/: adc.c  main.c  pwm.c
ADC/: CMakeLists.txt  adc.s  gpio.s  main.c  main.s  uart.s
PWM/: CMakeLists.txt  adc.s  gpio.s  main.c  main.s  pwm.s  uart.s
Project_C/05_pwmAdcC/: CMakeLists.txt
Project_C/05_pwmAdcC/include/: adc.h  pwm.h
Project_C/05_pwmAdcC/src/: main.c  pwm.c
